# NNAD

./: .gitignore  0001-Fixes-to-the-base-model.patch  0002-Implement-code-for-paper.patch  README.md  crowhuman_to_tfrecords.py  example_config.yaml  pretrain.py  run_multi_frame_model.py  run_single_frame.py  run_single_frame_model.py  train.py  train_flow_model.py  train_multi_frame_model.py  train_single_frame_model.py  write_multi_frame_model.py  write_single_frame_model.py
data/: CMakeLists.txt  __init__.py  data.py  setup.sh
data/cmake/: FindJsonCpp.cmake  FindTensorflow.cmake
data/src/: augment.cc  augment.hh  bbutils.cc  bbutils.hh  bbutils_binding.cc  bdd100k_dataset.cc  bdd100k_dataset.hh  bdd100kseg_dataset.cc  bdd100kseg_dataset.hh  cityscapes_dataset.cc  cityscapes_dataset.hh  data.hh  dataset.cc  dataset.hh  dataset_op.cc  file_dataset.cc  file_dataset.hh  flyingchairs_dataset.cc  flyingchairs_dataset.hh  folder_dataset.cc  folder_dataset.hh  kitti_dataset.cc  kitti_dataset.hh  sintel_dataset.cc  sintel_dataset.hh  utils.cc  utils.hh  webvision_dataset.cc  webvision_dataset.hh
evaluation/: boundingboxevaluator.py
helpers/: configreader.py  helpers.py  writers.py
model/: BiFPN.py  BoxBranch.py  Common.py  EfficientNet.py  Flow.py  Heads.py  LabelBranch.py  PretrainHead.py  Resnet.py  constants.py
model/loss/: BackwardFlowLoss.py  BoxLoss.py  EmbeddingLoss.py  FlowLoss.py  LabelLoss.py  PretrainLoss.py  WeightKendall.py  losses.py
